--- a/css/_mixins&anims.scss
+++ b/css/_mixins&anims.scss
@@ -10,6 +10,18 @@ $mediaBreakpoints: (
     }
 }
 
+@mixin flexbox($direction, $justify) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+}
+
+@mixin text($color) {
+    margin: 0;
+    color: $color;
+    font-family: $font-family;
+}
+
 @keyframes scaleUp {
     0% {
         transform: scale(0);
@@ -30,3 +42,16 @@ $mediaBreakpoints: (
     }
 }
 
+@keyframes fadeInOut {
+    0% {
+        opacity: .2;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: .2;
+    }
+}
