--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,30 @@
   }
 }
 
+@-webkit-keyframes fadeInOut {
+  0% {
+    opacity: .2;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: .2;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -58,6 +82,7 @@ body {
   min-height: 100vh;
   background: radial-gradient(#1f3756, #141539);
   padding: 2rem;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -68,7 +93,6 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  overflow: hidden;
 }
 
 .header {
@@ -76,18 +100,22 @@ body {
   padding: .6rem;
   border: 0.25rem solid #606e85;
   border-radius: .5rem;
+  width: Min(44rem, 100%);
+  margin: 0 auto;
+  z-index: 99;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: Min(44rem, 100%);
-  margin: 0 auto;
-  z-index: 99;
 }
 
 @media (min-width: 48rem) {
@@ -114,6 +142,8 @@ body {
   text-align: center;
   width: 6.25rem;
   height: 100%;
+  border-radius: .5rem;
+  cursor: default;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -124,8 +154,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-radius: .5rem;
-  cursor: default;
 }
 
 @media (min-width: 48rem) {
@@ -168,10 +196,6 @@ body {
   margin: 3rem auto;
 }
 
-.main__selection--inactive {
-  display: none;
-}
-
 @media (min-width: 48rem) {
   .main__selection {
     width: 24rem;
@@ -195,10 +219,6 @@ body {
   margin: 0 auto;
 }
 
-.main__in-game--inactive {
-  display: none;
-}
-
 @media (min-width: 48rem) {
   .main__in-game {
     -ms-grid-rows: 5rem auto;
@@ -219,10 +239,6 @@ body {
   justify-items: center;
   width: Min(55rem, 100%);
   margin: 3rem auto;
-}
-
-.main__result--inactive {
-  display: none;
 }
 
 @media (min-width: 48rem) {
@@ -346,17 +362,21 @@ body {
   height: 6rem;
   background-color: #dedede;
   border-radius: 50%;
+  -webkit-box-shadow: inset 0 0.3125rem 0 0 #bcbed2;
+          box-shadow: inset 0 0.3125rem 0 0 #bcbed2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: inset 0 0.3125rem 0 0 #bcbed2;
-          box-shadow: inset 0 0.3125rem 0 0 #bcbed2;
 }
 
 @media (min-width: 48rem) {
@@ -384,6 +404,8 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   border-radius: 50%;
+  -webkit-animation: fadeInOut 1s linear infinite;
+          animation: fadeInOut 1s linear infinite;
 }
 
 @media (min-width: 48rem) {
@@ -411,8 +433,8 @@ body {
 
 .pick__text {
   margin: 0;
-  font-family: "Barlow Semi Condensed", sans-serif;
   color: white;
+  font-family: "Barlow Semi Condensed", sans-serif;
   letter-spacing: .125rem;
   position: relative;
   cursor: default;
@@ -442,9 +464,10 @@ body {
 }
 
 .result__text {
+  margin: 0;
+  color: white;
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 3rem;
-  color: white;
   margin: 0 0 .5rem;
   cursor: default;
 }
@@ -471,6 +494,7 @@ body {
   bottom: 0;
   left: 0;
   background-color: white;
+  z-index: 999;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -478,12 +502,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  z-index: 999;
   display: none;
 }
 
@@ -500,8 +523,6 @@ body {
     width: 25rem;
     height: 25rem;
     top: 50%;
-    right: 50%;
-    bottom: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
@@ -514,9 +535,9 @@ body {
 }
 
 .rules__text {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  color: #3b4363;
   margin: 0;
+  color: #3b4363;
+  font-family: "Barlow Semi Condensed", sans-serif;
 }
 
 @media (min-width: 48rem) {
@@ -544,6 +565,7 @@ body {
   border: none;
   border-radius: .5rem;
   font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: .9rem;
   text-transform: uppercase;
   letter-spacing: .125rem;
   cursor: pointer;
